Add icons + ComponentInfos

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -5392,8 +5392,8 @@
 	<item component="ComponentInfo{com.infomaniak.sync/at.bitfire.davdroid.ui.AccountsActivity}" drawable="infomaniak_ksync" />
 	<item component="ComponentInfo{com.infonow.bofa/com.bofa.ecom.marvel.application.Flagscape}" drawable="bank_of_america" />
 	<item component="ComponentInfo{com.infonow.bofa/com.infonow.bofa.Launcher}" drawable="bank_of_america" />
-	<item component="ComponentInfo{com.infrasoft.uboi/com.infrasoft.uboi.UBIMADP}" drawable="bank" />
-	<item component="ComponentInfo{com.infrasoft.uboi/com.infrasoft.uboi.UBIPROD}" drawable="bank" />
+	<item component="ComponentInfo{com.infrasoft.uboi/com.infrasoft.uboi.UBIMADP}" drawable="vyom" />
+	<item component="ComponentInfo{com.infrasoft.uboi/com.infrasoft.uboi.UBIPROD}" drawable="vyom" />
 	<item component="ComponentInfo{com.infrasofttech.CentralBank/com.infrasofttech.centralbank.SplashActivity}" drawable="cent_mobile" />
 	<item component="ComponentInfo{com.infrasofttech.MahaBank/com.infrasofttech.MahaBank.MahaBank}" drawable="bank" />
 	<item component="ComponentInfo{com.infrasofttech.centralbankupi/com.infrasofttech.centralbankupi.SSA}" drawable="bank" />
@@ -7791,10 +7791,10 @@
 	<item component="ComponentInfo{com.pms.cameranextmod7/com.android.camera.CameraLauncher}" drawable="camera" />
 	<item component="ComponentInfo{com.pnb.android/com.pnb.android.ui.splash.SplashActivity}" drawable="bank" />
 	<item component="ComponentInfo{com.pnc.ecommerce.mobile.vw.android/com.pnc.ecommerce.mobile.vw.android.signOn.LogInActivity}" drawable="virtual_wallet" />
-	<item component="ComponentInfo{com.pnc.ecommerce.mobile/com.fisglobal.lfi.pnc.ui.MainActivity}" drawable="bank" />
-	<item component="ComponentInfo{com.pnc.ecommerce.mobile/com.pnc.ecommerce.mobile.PncMobileActivity}" drawable="bank" />
-	<item component="ComponentInfo{com.pnc.ecommerce.mobile/com.pnc.mbl.ui.AppConfigActivity}" drawable="bank" />
-	<item component="ComponentInfo{com.pnc.ecommerce.mobile/com.pnc.mbl.ui.MainActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.pnc.ecommerce.mobile/com.fisglobal.lfi.pnc.ui.MainActivity}" drawable="pnc" />
+	<item component="ComponentInfo{com.pnc.ecommerce.mobile/com.pnc.ecommerce.mobile.PncMobileActivity}" drawable="pnc" />
+	<item component="ComponentInfo{com.pnc.ecommerce.mobile/com.pnc.mbl.ui.AppConfigActivity}" drawable="pnc" />
+	<item component="ComponentInfo{com.pnc.ecommerce.mobile/com.pnc.mbl.ui.MainActivity}" drawable="pnc" />
 	<item component="ComponentInfo{com.pocket_plan.j7_003/com.pocket_plan.j7_003.MainActivity}" drawable="pocket_plan" />
 	<item component="ComponentInfo{com.pocketpalai/com.pocketpal.MainActivity}" drawable="pocketpal_ai" />
 	<item component="ComponentInfo{com.podbean.app.podcast/com.podbean.app.podcast.ui.login.LauncherActivity}" drawable="podbean" />
@@ -7979,7 +7979,7 @@
 	<item component="ComponentInfo{com.radiocom/com.radiocom.splash.SplashScreenActivity}" drawable="audacy" />
 	<item component="ComponentInfo{com.radiofrance.radio.fip.android/com.radiofrance.fipandroid.onboarding.OnBoardingActivity}" drawable="fm_radio" />
 	<item component="ComponentInfo{com.radiofrance.radio.franceinter.android/com.radiofrance.radio.franceinter.android.ui.activity.StarterActivity}" drawable="france_inter" />
-	<item component="ComponentInfo{com.radiofrance.radio.radiofrance.android/com.radiofrance.radio.radiofrance.android.screen.splash.SplashActivity}" drawable="france_inter" />
+	<item component="ComponentInfo{com.radiofrance.radio.radiofrance.android/com.radiofrance.radio.radiofrance.android.screen.splash.SplashActivity}" drawable="radio_france" />
 	<item component="ComponentInfo{com.radolyn.ayugram/com.exteragram.messenger.DefaultIcon}" drawable="ayugram" />
 	<item component="ComponentInfo{com.rafakob.synomanager/com.rafakob.synomanager.features.splash.SplashActivity}" drawable="synomanager" />
 	<item component="ComponentInfo{com.rahul.videoderbeta/com.rahul.videoderbeta.appinit.ActivityInitLoader}" drawable="videoder" />
@@ -13022,7 +13022,7 @@
 	<item component="ComponentInfo{kr.aboy.unit/kr.aboy.unit.MsgCheck}" drawable="unit_pro" />
 	<item component="ComponentInfo{kr.co.lylstudio.unicorn/kr.co.lylstudio.unicorn.MainActivity}" drawable="unicorn_blocker" />
 	<item component="ComponentInfo{kr.co.manhole.hujicam/kr.co.manhole.hujicam.d_Main.HJLaunch}" drawable="huji" />
-	<item component="ComponentInfo{kr.co.nowcom.mobile.afreeca/kr.co.nowcom.mobile.afreeca.IntroActivity}" drawable="afreecatv" />
+	<item component="ComponentInfo{kr.co.nowcom.mobile.afreeca/kr.co.nowcom.mobile.afreeca.IntroActivity}" drawable="soop" />
 	<item component="ComponentInfo{kr.co.rinasoft.yktime/kr.co.rinasoft.yktime.c2.LicenseCheckActivity}" drawable="flip_focus_timer" />
 	<item component="ComponentInfo{kr.co.rinasoft.yktime/kr.co.rinasoft.yktime.intro.IntroActivity}" drawable="flip_focus_timer" />
 	<item component="ComponentInfo{kr.co.spotvnow.app/kr.co.spotvnow.app.IntroActivity}" drawable="spotv_now" />
@@ -13276,13 +13276,13 @@
 	<item component="ComponentInfo{mx.weex.appwallet/mx.weex.appwallet.activity.SplashActivity}" drawable="bank" />
 	<item component="ComponentInfo{my.android.calc/my.android.calc.MainActivity}" drawable="mobi_calc" />
 	<item component="ComponentInfo{my.com.hongleongconnect.mobileconnect/my.com.hongleongconnect.mobileconnect.SplashScreenActivity}" drawable="hlb_connect" />
-<item component="ComponentInfo{my.com.maxis.hotlink.production/my.com.maxis.hotlink.RevampMainActivity}" drawable="hotlink" />
+	<item component="ComponentInfo{my.com.maxis.hotlink.production/my.com.maxis.hotlink.RevampMainActivity}" drawable="hotlink" />
 	<item component="ComponentInfo{my.com.maxis.hotlink.production/my.com.maxis.hotlink.main.MainActivity}" drawable="hotlink" />
 	<item component="ComponentInfo{my.com.maybank2u.m2umobile/my.com.maybank2u.m2umobile.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{my.com.tngdigital.ewallet/my.com.tngdigital.ewallet.ui.SplashActivity}" drawable="tng_ewallet" />
 	<item component="ComponentInfo{my.edu.taylors.mobilecampus/my.edu.taylors.mobilecampus.NameActivity}" drawable="taylors_mobile" />
 	<item component="ComponentInfo{my.gov.onegovappstore.mysejahtera/my.gov.onegovappstore.mysejahtera.MainActivity}" drawable="mysejahtera" />
-	<item component="ComponentInfo{my.noveldokusha/my.noveldokusha.ui.screens.main.MainActivity}" drawable="novel_dokusha" />
+	<item component="ComponentInfo{my.noveldokusha/my.noveldokusha.ui.screens.main.MainActivity}" drawable="noveldokusha" />
 	<item component="ComponentInfo{my.yes.yes4g/my.yes.myyes4g.HomeActivity}" drawable="myyes" />
 	<item component="ComponentInfo{mymacros.com.mymacros/mymacros.com.mymacros.LeftSideMenu.MealContainerActivity}" drawable="my_macros" />
 	<item component="ComponentInfo{name.antonsmirnov.android.arduinodroid2/name.antonsmirnov.android.arduinodroid.ui.MainActivity}" drawable="arduino_ide" />
@@ -15651,7 +15651,7 @@
 	<item component="ComponentInfo{widget.dd.com.overdrop.free/widget.dd.com.overdrop.activity.SplashScreenActivity}" drawable="overdrop" />
 	<item component="ComponentInfo{widget.dd.com.overdrop.free/widget.dd.com.overdrop.free.alias.DefaultIconAlias}" drawable="overdrop" />
 	<item component="ComponentInfo{wiktoria.goroch.bible_kjva.AOUSFCKLLRSGYXYC/king.james.bible.android.activity.LaunchActivity}" drawable="bible" />
-	<item component="ComponentInfo{wit.android.bcpBankingApp.activoBank/wit.android.bcpBankingApp.ui.activities.SplashScreenActivity}" drawable="bank" />
+	<item component="ComponentInfo{wit.android.bcpBankingApp.activoBank/wit.android.bcpBankingApp.ui.activities.SplashScreenActivity}" drawable="activobank" />
 	<item component="ComponentInfo{wit.android.bcpBankingApp.millennium/wit.android.bcpBankingApp.ui.activities.SplashScreenActivity}" drawable="millenium_bank" />
 	<item component="ComponentInfo{wit.android.bcpBankingApp.millenniumPL/pl.bankmillennium.gui.prelogin.SplashScreenActivity}" drawable="millenium_bank" />
 	<item component="ComponentInfo{wni.WeathernewsTouch.jp/wni.WeathernewsTouch.jp.Splash}" drawable="weather" />
