--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,7 +4,11 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="mi_argentina" />
+	<item drawable="papara" />
+	<item drawable="radio_france" />
 	<item drawable="right_gallery" />
+	<item drawable="soop" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -604,6 +608,7 @@
 	<item drawable="messenger_alt_1" />
 	<item drawable="messenger_kids_alt_1" />
 	<item drawable="messenger_lite_alt_1" />
+	<item drawable="mi_argentina_alt_1" />
 	<item drawable="mi_movistar_alt_1" />
 	<item drawable="mi_security_alt_1" />
 	<item drawable="microg_alt_1" />
@@ -712,6 +717,7 @@
 	<item drawable="outline_alt_1" />
 	<item drawable="owly_alt_1" />
 	<item drawable="panera_bread_alt_1" />
+	<item drawable="papara_alt_1" />
 	<item drawable="passwordstore_alt_1" />
 	<item drawable="patreon_alt_1" />
 	<item drawable="patreon_alt_2" />
@@ -1176,6 +1182,7 @@
 	<item drawable="sonic_the_hedgehog_2_alt_1" />
 	<item drawable="sonic_the_hedgehog_alt_1" />
 	<item drawable="sony_videography_alt_1" />
+	<item drawable="soop_alt_1" />
 	<item drawable="sova_v_re_alt_1" />
 	<item drawable="sova_v_re_alt_2" />
 	<item drawable="spin_the_wheel_alt_1" />
@@ -2283,7 +2290,6 @@
 	<item drawable="afk_journey" />
 	<item drawable="afl_live" />
 	<item drawable="afreecatv" />
-	<item drawable="afreerdp" />
 	<item drawable="after_focus" />
 	<item drawable="afterlight" />
 	<item drawable="afterpay" />
@@ -7813,7 +7819,7 @@
 	<item drawable="nova_poshta" />
 	<item drawable="nova_settings" />
 	<item drawable="nova_video_player" />
-	<item drawable="novel_dokusha" />
+	<item drawable="noveldokusha" />
 	<item drawable="novikombank" />
 	<item drawable="now" />
 	<item drawable="now_mobile" />
@@ -8783,6 +8789,7 @@
 	<item drawable="radio_105" />
 	<item drawable="radio_canada_ohdio" />
 	<item drawable="radio_de" />
+	<item drawable="radio_france" />
 	<item drawable="radio_garden" />
 	<item drawable="radio_s" />
 	<item drawable="radiobox" />
@@ -9733,6 +9740,7 @@
 	<item drawable="sony_videography" />
 	<item drawable="sonyliv" />
 	<item drawable="soonta" />
+	<item drawable="soop" />
 	<item drawable="soothing_noise_looper" />
 	<item drawable="sophos_home" />
 	<item drawable="sophos_mobile_security" />
