--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -8529,7 +8529,7 @@
 	<item drawable="pokemon_sleep" />
 	<item drawable="pokemon_tcg" />
 	<item drawable="pokemon_tcg_live" />
-	<item drawable="pokemon_tgc_pocket" />
+	<item drawable="pokemon_tcg_pocket" />
 	<item drawable="pokemon_unite" />
 	<item drawable="pokemongo" />
 	<item drawable="poker_online" />
