--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -9,6 +9,7 @@
 	<item drawable="radio_france" />
 	<item drawable="right_gallery" />
 	<item drawable="soop" />
+	<item drawable="mmrl" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -635,6 +636,7 @@
 	<item drawable="minimalist_pomodoro_timer_alt_1" />
 	<item drawable="mj_pdf_reader_alt_1" />
 	<item drawable="mlauncher_alt_1" />
+	<item drawable="mmrl_alt_1" />
 	<item drawable="moelist_alt_1" />
 	<item drawable="money_fellows_alt_1" />
 	<item drawable="moshidon_nightly_alt_1" />
