Update xManager icon, fixes

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -882,6 +882,7 @@
 	<item drawable="signal_alt_11" />
 	<item drawable="signal_alt_12" />
 	<item drawable="signal_alt_13" />
+	<item drawable="simosa_alt_1" />
 	<item drawable="simple_app_launcher_amber" />
 	<item drawable="simple_app_launcher_blue" />
 	<item drawable="simple_app_launcher_bluegrey" />
@@ -1420,6 +1421,7 @@
 	<item drawable="xbox_alt_2" />
 	<item drawable="xda_labs_alt_1" />
 	<item drawable="xender_alt_1" />
+	<item drawable="xmanager_alt_1" />
 	<item drawable="xmind_alt_1" />
 	<item drawable="xposed_installer_alt_1" />
 	<item drawable="yandex_alt_1" />
