--- a/app/src/main/res/values/launchers.xml
+++ b/app/src/main/res/values/launchers.xml
@@ -32,6 +32,7 @@
         <item>nova</item>
         <item>pixel</item>
         <item>poco</item>
+        <item>projectivy</item>
         <item>posidon</item>
         <item>smart</item>
         <item>solo</item>
