--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -53,6 +53,7 @@
 	<item drawable="yoosee" />
 	<item drawable="zenless_zone_zero" />
 	<item drawable="zinli" />
+	<item drawable="showly" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -869,6 +870,7 @@
 	<item drawable="shelter_alt_1" />
 	<item drawable="shizuku_alt_1" />
 	<item drawable="showcase_alt_1" />
+	<item drawable="showly_alt_1" />
 	<item drawable="signal_alt_1" />
 	<item drawable="signal_alt_2" />
 	<item drawable="signal_alt_3" />
