--- a/app/src/main/res/values/launchers.xml
+++ b/app/src/main/res/values/launchers.xml
@@ -10,11 +10,14 @@
         <item>apex</item>
         <!--<item>atom</item>-->
         <!--<item>aviate</item>-->
+        <item>before</item>
         <!--<item>blackberry</item>-->
         <!--<item>cm_theme</item>-->
         <!--<item>evie</item>-->
+        <item>coloros</item>
         <item>flick</item>
         <item>go_ex</item>
+        <item>hios</item>
         <!--<item>holo</item>-->
         <!--<item>holo_hd</item>-->
         <item>hyperion</item>
@@ -27,9 +30,11 @@
         <!--<item>mini</item>-->
         <item>niagara</item>
         <!--<item>next</item>-->
+        <item>nothing</item>
         <item>nougat</item>
         <item>neo</item>
         <item>nova</item>
+        <item>oxygenos</item>
         <item>pixel</item>
         <item>poco</item>
         <item>projectivy</item>
@@ -38,6 +43,7 @@
         <item>solo</item>
         <item>square</item>
         <!--<item>v</item>-->
+        <item>tinybit</item>
         <item>zenui</item>
         <!--<item>zero</item>-->
     </string-array>
