--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -97,6 +97,7 @@
 	<item drawable="yowindow_weather" />
 	<item drawable="zenless_zone_zero" />
 	<item drawable="zinli" />
+	<item drawable="canva" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -195,6 +196,7 @@
 	<item drawable="camera_alt_6" />
 	<item drawable="camera_alt_7" />
 	<item drawable="camera_mx_alt_1" />
+	<item drawable="canva_alt_1" />
 	<item drawable="car_parking_multiplayer_alt_1" />
 	<item drawable="cat_avatar_generator_alt_1" />
 	<item drawable="catcode_alt_1" />
