--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -3096,7 +3096,6 @@
 	<item drawable="bambu_handy" />
 	<item drawable="banafo_transcript" />
 	<item drawable="banca_movil" />
-	<item drawable="bancamp_for_artists" />
 	<item drawable="bancaribe_digital" />
 	<item drawable="banco_azteca" />
 	<item drawable="banco_de_la_nacion" />
@@ -3111,6 +3110,7 @@
 	<item drawable="band" />
 	<item drawable="bandai_tcg" />
 	<item drawable="bandcamp" />
+	<item drawable="bandcamp_for_artists" />
 	<item drawable="bandlab" />
 	<item drawable="bandsintown" />
 	<item drawable="banfield_pet_hospital" />
