--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2189,7 +2189,7 @@
 	<item component="ComponentInfo{com.bandainamcoent.ultimateninjastorm/com.bandainamcoent.ultimateninjastorm.MainActivity}" drawable="naruto_ultimate_ninja_storm" />
 	<item component="ComponentInfo{com.bandainamcogames.dbzdokkanww/org.cocos2dx.cpp.AppActivity}" drawable="dragonballz" />
 	<item component="ComponentInfo{com.bandcamp.android/com.bandcamp.android.view.SplashActivity}" drawable="bandcamp" />
-	<item component="ComponentInfo{com.bandcamp.artistapp/com.bandcamp.artistapp.RootTabActivity}" drawable="bancamp_for_artists" />
+	<item component="ComponentInfo{com.bandcamp.artistapp/com.bandcamp.artistapp.RootTabActivity}" drawable="bandcamp_for_artists" />
 	<item component="ComponentInfo{com.bandlab.bandlab/com.bandlab.bandlab.core.activity.navigation.NavigationActivity}" drawable="bandlab" />
 	<item component="ComponentInfo{com.bandlab.bandlab/com.bandlab.navigation.entry.NavigationActivity}" drawable="bandlab" />
 	<item component="ComponentInfo{com.bandot.alexis.minimal.iconpack/com.bandot.alexis.minimal.iconpack.activities.SplashActivity}" drawable="alexis" />
