--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -98,6 +98,7 @@
 	<item drawable="zenless_zone_zero" />
 	<item drawable="zinli" />
 	<item drawable="canva" />
+	<item drawable="careem" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -198,6 +199,7 @@
 	<item drawable="camera_mx_alt_1" />
 	<item drawable="canva_alt_1" />
 	<item drawable="car_parking_multiplayer_alt_1" />
+	<item drawable="careem_alt_1" />
 	<item drawable="cat_avatar_generator_alt_1" />
 	<item drawable="catcode_alt_1" />
 	<item drawable="cbc_gem_alt_1" />
