Add icons&compinfo (#1067)
* add icons

* add compinfo

* add icons

* add icons

* add compinfo

* add icons

* add compinfo

* add icons

* add icons

* add icons

* add compinfo

* add new launchers icons

* add compinfo

* small fix

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2189,7 +2189,7 @@
 	<item component="ComponentInfo{com.bandainamcoent.ultimateninjastorm/com.bandainamcoent.ultimateninjastorm.MainActivity}" drawable="naruto_ultimate_ninja_storm" />
 	<item component="ComponentInfo{com.bandainamcogames.dbzdokkanww/org.cocos2dx.cpp.AppActivity}" drawable="dragonballz" />
 	<item component="ComponentInfo{com.bandcamp.android/com.bandcamp.android.view.SplashActivity}" drawable="bandcamp" />
-	<item component="ComponentInfo{com.bandcamp.artistapp/com.bandcamp.artistapp.RootTabActivity}" drawable="bancamp_for_artists" />
+	<item component="ComponentInfo{com.bandcamp.artistapp/com.bandcamp.artistapp.RootTabActivity}" drawable="bandcamp_for_artists" />
 	<item component="ComponentInfo{com.bandlab.bandlab/com.bandlab.bandlab.core.activity.navigation.NavigationActivity}" drawable="bandlab" />
 	<item component="ComponentInfo{com.bandlab.bandlab/com.bandlab.navigation.entry.NavigationActivity}" drawable="bandlab" />
 	<item component="ComponentInfo{com.bandot.alexis.minimal.iconpack/com.bandot.alexis.minimal.iconpack.activities.SplashActivity}" drawable="alexis" />
@@ -15985,4 +15985,5 @@
 	<item component="ComponentInfo{zombie.survival.craft.z/ru.kv3dunityext.permissions.MainActivity}" drawable="last_day_on_earth_survival" />
 	<item component="ComponentInfo{zte.com.cn.alarmclock/zte.com.cn.alarmclock.activity.AlarmClockActivity}" drawable="clock" />
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
+	<item component="ComponentInfo{com.careem.acma/com.careem.superapp.OnboardingActivityRebrandingIcon}" drawable="careem" />
 </resources>
