--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -98,6 +98,7 @@
 	<item drawable="zenless_zone_zero" />
 	<item drawable="zinli" />
 	<item drawable="canva" />
+	<item drawable="careem" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -198,6 +199,7 @@
 	<item drawable="camera_mx_alt_1" />
 	<item drawable="canva_alt_1" />
 	<item drawable="car_parking_multiplayer_alt_1" />
+	<item drawable="careem_alt_1" />
 	<item drawable="cat_avatar_generator_alt_1" />
 	<item drawable="catcode_alt_1" />
 	<item drawable="cbc_gem_alt_1" />
@@ -3096,7 +3098,6 @@
 	<item drawable="bambu_handy" />
 	<item drawable="banafo_transcript" />
 	<item drawable="banca_movil" />
-	<item drawable="bancamp_for_artists" />
 	<item drawable="bancaribe_digital" />
 	<item drawable="banco_azteca" />
 	<item drawable="banco_de_la_nacion" />
@@ -3111,6 +3112,7 @@
 	<item drawable="band" />
 	<item drawable="bandai_tcg" />
 	<item drawable="bandcamp" />
+	<item drawable="bandcamp_for_artists" />
 	<item drawable="bandlab" />
 	<item drawable="bandsintown" />
 	<item drawable="banfield_pet_hospital" />
