--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -99,6 +99,7 @@
 	<item drawable="zinli" />
 	<item drawable="canva" />
 	<item drawable="careem" />
+	<item drawable="zimly" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1507,6 +1508,7 @@
 	<item drawable="youtube_vanced_alt_4" />
 	<item drawable="zattoo_alt_1" />
 	<item drawable="zello_alt_1" />
+	<item drawable="zimly_alt_1" />
 
 	<category title="Calendar" />
 	<item drawable="calendar" />
