--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -15986,4 +15986,22 @@
 	<item component="ComponentInfo{zte.com.cn.alarmclock/zte.com.cn.alarmclock.activity.AlarmClockActivity}" drawable="clock" />
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
 	<item component="ComponentInfo{com.careem.acma/com.careem.superapp.OnboardingActivityRebrandingIcon}" drawable="careem" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Amber}" drawable="fossify_paint_amber" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Blue_Grey}" drawable="fossify_paint_blue_grey" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Blue}" drawable="fossify_paint_blue" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Brown}" drawable="fossify_paint_brown" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Cyan}" drawable="fossify_paint_cyan" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Deep_Orange}" drawable="fossify_paint_deep_orange" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Deep_Purple}" drawable="fossify_paint_deep_purple" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Grey_Black}" drawable="fossify_paint_grey_black" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Indigo}" drawable="fossify_paint_indigo" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Light_Blue}" drawable="fossify_paint_light_blue" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Light_Green}" drawable="fossify_paint_light_green" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Lime}" drawable="fossify_paint_lime" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Orange}" drawable="fossify_paint_orange" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Pink}" drawable="fossify_paint_pink" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Purple}" drawable="fossify_paint_purple" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Red}" drawable="fossify_paint_red" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Teal}" drawable="fossify_paint_teal" />
+	<item component="ComponentInfo{org.fossify.paint/org.fossify.paint.activities.SplashActivity.Yellow}" drawable="fossify_paint_yellow" />
 </resources>
