--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -100,6 +100,24 @@
 	<item drawable="canva" />
 	<item drawable="careem" />
 	<item drawable="zimly" />
+	<item drawable="fossify_paint_amber" />
+	<item drawable="fossify_paint_blue" />
+	<item drawable="fossify_paint_blue_grey" />
+	<item drawable="fossify_paint_brown" />
+	<item drawable="fossify_paint_cyan" />
+	<item drawable="fossify_paint_deep_orange" />
+	<item drawable="fossify_paint_deep_purple" />
+	<item drawable="fossify_paint_grey_black" />
+	<item drawable="fossify_paint_indigo" />
+	<item drawable="fossify_paint_light_blue" />
+	<item drawable="fossify_paint_light_green" />
+	<item drawable="fossify_paint_lime" />
+	<item drawable="fossify_paint_orange" />
+	<item drawable="fossify_paint_pink" />
+	<item drawable="fossify_paint_purple" />
+	<item drawable="fossify_paint_red" />
+	<item drawable="fossify_paint_teal" />
+	<item drawable="fossify_paint_yellow" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -520,6 +538,24 @@
 	<item drawable="fossify_notes_red" />
 	<item drawable="fossify_notes_teal" />
 	<item drawable="fossify_notes_yellow" />
+	<item drawable="fossify_paint_amber" />
+	<item drawable="fossify_paint_blue" />
+	<item drawable="fossify_paint_blue_grey" />
+	<item drawable="fossify_paint_brown" />
+	<item drawable="fossify_paint_cyan" />
+	<item drawable="fossify_paint_deep_orange" />
+	<item drawable="fossify_paint_deep_purple" />
+	<item drawable="fossify_paint_grey_black" />
+	<item drawable="fossify_paint_indigo" />
+	<item drawable="fossify_paint_light_blue" />
+	<item drawable="fossify_paint_light_green" />
+	<item drawable="fossify_paint_lime" />
+	<item drawable="fossify_paint_orange" />
+	<item drawable="fossify_paint_pink" />
+	<item drawable="fossify_paint_purple" />
+	<item drawable="fossify_paint_red" />
+	<item drawable="fossify_paint_teal" />
+	<item drawable="fossify_paint_yellow" />
 	<item drawable="fossify_phone_amber" />
 	<item drawable="fossify_phone_blue" />
 	<item drawable="fossify_phone_bluegrey" />
