--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -324,12 +324,12 @@
 	<item drawable="fosdem_alt_1" />
 	<item drawable="fossify_calculator_amber" />
 	<item drawable="fossify_calculator_blue" />
-	<item drawable="fossify_calculator_bluegrey" />
+	<item drawable="fossify_calculator_blue_grey" />
 	<item drawable="fossify_calculator_brown" />
 	<item drawable="fossify_calculator_cyan" />
 	<item drawable="fossify_calculator_deep_orange" />
 	<item drawable="fossify_calculator_deep_purple" />
-	<item drawable="fossify_calculator_greyblack" />
+	<item drawable="fossify_calculator_grey_black" />
 	<item drawable="fossify_calculator_indigo" />
 	<item drawable="fossify_calculator_light_blue" />
 	<item drawable="fossify_calculator_light_green" />
@@ -342,12 +342,12 @@
 	<item drawable="fossify_calculator_yellow" />
 	<item drawable="fossify_calendar_amber" />
 	<item drawable="fossify_calendar_blue" />
-	<item drawable="fossify_calendar_bluegrey" />
+	<item drawable="fossify_calendar_blue_grey" />
 	<item drawable="fossify_calendar_brown" />
 	<item drawable="fossify_calendar_cyan" />
 	<item drawable="fossify_calendar_deep_orange" />
 	<item drawable="fossify_calendar_deep_purple" />
-	<item drawable="fossify_calendar_greyblack" />
+	<item drawable="fossify_calendar_grey_black" />
 	<item drawable="fossify_calendar_indigo" />
 	<item drawable="fossify_calendar_light_blue" />
 	<item drawable="fossify_calendar_light_green" />
@@ -360,12 +360,12 @@
 	<item drawable="fossify_calendar_yellow" />
 	<item drawable="fossify_camera_amber" />
 	<item drawable="fossify_camera_blue" />
-	<item drawable="fossify_camera_bluegrey" />
+	<item drawable="fossify_camera_blue_grey" />
 	<item drawable="fossify_camera_brown" />
 	<item drawable="fossify_camera_cyan" />
 	<item drawable="fossify_camera_deep_orange" />
 	<item drawable="fossify_camera_deep_purple" />
-	<item drawable="fossify_camera_greyblack" />
+	<item drawable="fossify_camera_grey_black" />
 	<item drawable="fossify_camera_indigo" />
 	<item drawable="fossify_camera_light_blue" />
 	<item drawable="fossify_camera_light_green" />
@@ -378,12 +378,12 @@
 	<item drawable="fossify_camera_yellow" />
 	<item drawable="fossify_clock_amber" />
 	<item drawable="fossify_clock_blue" />
-	<item drawable="fossify_clock_bluegrey" />
+	<item drawable="fossify_clock_blue_grey" />
 	<item drawable="fossify_clock_brown" />
 	<item drawable="fossify_clock_cyan" />
 	<item drawable="fossify_clock_deep_orange" />
 	<item drawable="fossify_clock_deep_purple" />
-	<item drawable="fossify_clock_greyblack" />
+	<item drawable="fossify_clock_grey_black" />
 	<item drawable="fossify_clock_indigo" />
 	<item drawable="fossify_clock_light_blue" />
 	<item drawable="fossify_clock_light_green" />
@@ -396,12 +396,12 @@
 	<item drawable="fossify_clock_yellow" />
 	<item drawable="fossify_contacts_amber" />
 	<item drawable="fossify_contacts_blue" />
-	<item drawable="fossify_contacts_bluegrey" />
+	<item drawable="fossify_contacts_blue_grey" />
 	<item drawable="fossify_contacts_brown" />
 	<item drawable="fossify_contacts_cyan" />
 	<item drawable="fossify_contacts_deep_orange" />
 	<item drawable="fossify_contacts_deep_purple" />
-	<item drawable="fossify_contacts_greyblack" />
+	<item drawable="fossify_contacts_grey_black" />
 	<item drawable="fossify_contacts_indigo" />
 	<item drawable="fossify_contacts_light_blue" />
 	<item drawable="fossify_contacts_light_green" />
@@ -414,12 +414,12 @@
 	<item drawable="fossify_contacts_yellow" />
 	<item drawable="fossify_file_manager_amber" />
 	<item drawable="fossify_file_manager_blue" />
-	<item drawable="fossify_file_manager_bluegrey" />
+	<item drawable="fossify_file_manager_blue_grey" />
 	<item drawable="fossify_file_manager_brown" />
 	<item drawable="fossify_file_manager_cyan" />
 	<item drawable="fossify_file_manager_deep_orange" />
 	<item drawable="fossify_file_manager_deep_purple" />
-	<item drawable="fossify_file_manager_greyblack" />
+	<item drawable="fossify_file_manager_grey_black" />
 	<item drawable="fossify_file_manager_indigo" />
 	<item drawable="fossify_file_manager_light_blue" />
 	<item drawable="fossify_file_manager_light_green" />
@@ -432,12 +432,12 @@
 	<item drawable="fossify_file_manager_yellow" />
 	<item drawable="fossify_gallery_amber" />
 	<item drawable="fossify_gallery_blue" />
-	<item drawable="fossify_gallery_bluegrey" />
+	<item drawable="fossify_gallery_blue_grey" />
 	<item drawable="fossify_gallery_brown" />
 	<item drawable="fossify_gallery_cyan" />
 	<item drawable="fossify_gallery_deep_orange" />
 	<item drawable="fossify_gallery_deep_purple" />
-	<item drawable="fossify_gallery_greyblack" />
+	<item drawable="fossify_gallery_grey_black" />
 	<item drawable="fossify_gallery_indigo" />
 	<item drawable="fossify_gallery_light_blue" />
 	<item drawable="fossify_gallery_light_green" />
@@ -450,12 +450,12 @@
 	<item drawable="fossify_gallery_yellow" />
 	<item drawable="fossify_keyboard_amber" />
 	<item drawable="fossify_keyboard_blue" />
-	<item drawable="fossify_keyboard_bluegrey" />
+	<item drawable="fossify_keyboard_blue_grey" />
 	<item drawable="fossify_keyboard_brown" />
 	<item drawable="fossify_keyboard_cyan" />
 	<item drawable="fossify_keyboard_deep_orange" />
 	<item drawable="fossify_keyboard_deep_purple" />
-	<item drawable="fossify_keyboard_greyblack" />
+	<item drawable="fossify_keyboard_grey_black" />
 	<item drawable="fossify_keyboard_indigo" />
 	<item drawable="fossify_keyboard_light_blue" />
 	<item drawable="fossify_keyboard_light_green" />
@@ -468,12 +468,12 @@
 	<item drawable="fossify_keyboard_yellow" />
 	<item drawable="fossify_launcher_amber" />
 	<item drawable="fossify_launcher_blue" />
-	<item drawable="fossify_launcher_bluegrey" />
+	<item drawable="fossify_launcher_blue_grey" />
 	<item drawable="fossify_launcher_brown" />
 	<item drawable="fossify_launcher_cyan" />
 	<item drawable="fossify_launcher_deep_orange" />
 	<item drawable="fossify_launcher_deep_purple" />
-	<item drawable="fossify_launcher_greyblack" />
+	<item drawable="fossify_launcher_grey_black" />
 	<item drawable="fossify_launcher_indigo" />
 	<item drawable="fossify_launcher_light_blue" />
 	<item drawable="fossify_launcher_light_green" />
@@ -486,12 +486,12 @@
 	<item drawable="fossify_launcher_yellow" />
 	<item drawable="fossify_messages_amber" />
 	<item drawable="fossify_messages_blue" />
-	<item drawable="fossify_messages_bluegrey" />
+	<item drawable="fossify_messages_blue_grey" />
 	<item drawable="fossify_messages_brown" />
 	<item drawable="fossify_messages_cyan" />
 	<item drawable="fossify_messages_deep_orange" />
 	<item drawable="fossify_messages_deep_purple" />
-	<item drawable="fossify_messages_greyblack" />
+	<item drawable="fossify_messages_grey_black" />
 	<item drawable="fossify_messages_indigo" />
 	<item drawable="fossify_messages_light_blue" />
 	<item drawable="fossify_messages_light_green" />
@@ -504,12 +504,12 @@
 	<item drawable="fossify_messages_yellow" />
 	<item drawable="fossify_music_player_amber" />
 	<item drawable="fossify_music_player_blue" />
-	<item drawable="fossify_music_player_bluegrey" />
+	<item drawable="fossify_music_player_blue_grey" />
 	<item drawable="fossify_music_player_brown" />
 	<item drawable="fossify_music_player_cyan" />
 	<item drawable="fossify_music_player_deep_orange" />
 	<item drawable="fossify_music_player_deep_purple" />
-	<item drawable="fossify_music_player_greyblack" />
+	<item drawable="fossify_music_player_grey_black" />
 	<item drawable="fossify_music_player_indigo" />
 	<item drawable="fossify_music_player_light_blue" />
 	<item drawable="fossify_music_player_light_green" />
@@ -522,12 +522,12 @@
 	<item drawable="fossify_music_player_yellow" />
 	<item drawable="fossify_notes_amber" />
 	<item drawable="fossify_notes_blue" />
-	<item drawable="fossify_notes_bluegrey" />
+	<item drawable="fossify_notes_blue_grey" />
 	<item drawable="fossify_notes_brown" />
 	<item drawable="fossify_notes_cyan" />
 	<item drawable="fossify_notes_deep_orange" />
 	<item drawable="fossify_notes_deep_purple" />
-	<item drawable="fossify_notes_greyblack" />
+	<item drawable="fossify_notes_grey_black" />
 	<item drawable="fossify_notes_indigo" />
 	<item drawable="fossify_notes_light_blue" />
 	<item drawable="fossify_notes_light_green" />
@@ -558,12 +558,12 @@
 	<item drawable="fossify_paint_yellow" />
 	<item drawable="fossify_phone_amber" />
 	<item drawable="fossify_phone_blue" />
-	<item drawable="fossify_phone_bluegrey" />
+	<item drawable="fossify_phone_blue_grey" />
 	<item drawable="fossify_phone_brown" />
 	<item drawable="fossify_phone_cyan" />
 	<item drawable="fossify_phone_deep_orange" />
 	<item drawable="fossify_phone_deep_purple" />
-	<item drawable="fossify_phone_greyblack" />
+	<item drawable="fossify_phone_grey_black" />
 	<item drawable="fossify_phone_indigo" />
 	<item drawable="fossify_phone_light_blue" />
 	<item drawable="fossify_phone_light_green" />
@@ -576,12 +576,12 @@
 	<item drawable="fossify_phone_yellow" />
 	<item drawable="fossify_voice_recorder_amber" />
 	<item drawable="fossify_voice_recorder_blue" />
-	<item drawable="fossify_voice_recorder_bluegrey" />
+	<item drawable="fossify_voice_recorder_blue_grey" />
 	<item drawable="fossify_voice_recorder_brown" />
 	<item drawable="fossify_voice_recorder_cyan" />
 	<item drawable="fossify_voice_recorder_deep_orange" />
 	<item drawable="fossify_voice_recorder_deep_purple" />
-	<item drawable="fossify_voice_recorder_greyblack" />
+	<item drawable="fossify_voice_recorder_grey_black" />
 	<item drawable="fossify_voice_recorder_indigo" />
 	<item drawable="fossify_voice_recorder_light_blue" />
 	<item drawable="fossify_voice_recorder_light_green" />
