icon rename: turn_up -> turn_up_alt_1

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -1354,6 +1354,7 @@
 	<item drawable="tunein_radio_alt_1" />
 	<item drawable="tunity_alt_1" />
 	<item drawable="turbo_dismount_alt_1" />
+	<item drawable="turn_up_alt_1" />
 	<item drawable="tusky_alt_1" />
 	<item drawable="tutanota_alt_1" />
 	<item drawable="twitch_alt_1" />
@@ -10776,7 +10777,6 @@
 	<item drawable="turk_telekom" />
 	<item drawable="turkcell_dijital_operator" />
 	<item drawable="turkish_airlines" />
-	<item drawable="turn_up" />
 	<item drawable="turnip" />
 	<item drawable="turrit" />
 	<item drawable="turtl_notes" />
