Add 1 icon and update compinfo

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -405,4 +405,9 @@
         contribution="Icons"
         image=""
         link="https://github.com/sleepylonganisa" />    
+    <contributor
+        name="Gewalee Lekcharuthas"
+        contribution="Icons"
+        image=""
+        link="https://github.com/gewaleelek" />
 </resources>
