--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -1354,6 +1354,7 @@
 	<item drawable="tunein_radio_alt_1" />
 	<item drawable="tunity_alt_1" />
 	<item drawable="turbo_dismount_alt_1" />
+	<item drawable="turn_up_alt_1" />
 	<item drawable="tusky_alt_1" />
 	<item drawable="tutanota_alt_1" />
 	<item drawable="twitch_alt_1" />
@@ -5432,7 +5433,6 @@
 	<item drawable="glimpse" />
 	<item drawable="glinet" />
 	<item drawable="glitch_lab" />
-	<item drawable="global_icon_pack" />
 	<item drawable="globeone" />
 	<item drawable="globible" />
 	<item drawable="globoplay" />
@@ -10776,7 +10776,6 @@
 	<item drawable="turk_telekom" />
 	<item drawable="turkcell_dijital_operator" />
 	<item drawable="turkish_airlines" />
-	<item drawable="turn_up" />
 	<item drawable="turnip" />
 	<item drawable="turrit" />
 	<item drawable="turtl_notes" />
