--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="credit_karma" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -142,6 +143,7 @@
 	<item drawable="cows_revenge_alt_1" />
 	<item drawable="cplus_classifieds_alt_1" />
 	<item drawable="crazy_taxi_alt_1" />
+	<item drawable="credit_karma_alt_1" />
 	<item drawable="cync_alt_1" />
 	<item drawable="dantotsu_alt_1" />
 	<item drawable="dashchan_alt_1" />
