--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -29,6 +29,7 @@
 	<item drawable="turn_up" />
 	<item drawable="uchi" />
 	<item drawable="wahoo" />
+	<item drawable="ytdlnis" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1455,6 +1456,7 @@
 	<item drawable="youtube_vanced_alt_2" />
 	<item drawable="youtube_vanced_alt_3" />
 	<item drawable="youtube_vanced_alt_4" />
+	<item drawable="ytdlnis_alt_1" />
 	<item drawable="zattoo_alt_1" />
 	<item drawable="zello_alt_1" />
 	<item drawable="zimly_alt_1" />
