--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -5857,7 +5857,7 @@
 	<item component="ComponentInfo{com.jxareas.xpensor/com.jxareas.xpensor.features.authentication.presentation.ui.AuthenticationActivity}" drawable="xpensor" />
 	<item component="ComponentInfo{com.k2fsa.sherpa.onnx.tts.engine/com.k2fsa.sherpa.onnx.tts.engine.MainActivity}" drawable="sherpa_tts" />
 	<item component="ComponentInfo{com.kaajjo.libresudoku/com.kaajjo.libresudoku.MainActivity}" drawable="libresudoku" />
-	<item component="ComponentInfo{com.kaanelloed.iconeration/com.kaanelloed.iconeration.MainActivity}" drawable="iconeration" />
+	<item component="ComponentInfo{com.kaanelloed.iconeration/com.kaanelloed.iconeration.MainActivity}" drawable="alembicons" />
 	<item component="ComponentInfo{com.kabam.marvelbattle/com.explodingbarrel.Activity}" drawable="marvel_champions" />
 	<item component="ComponentInfo{com.kabouzeid.gramophone/com.kabouzeid.gramophone.ui.activities.MainActivity}" drawable="phonograph" />
 	<item component="ComponentInfo{com.kaching.merchant/com.kaching.merchant.Activities.RegisterActivity}" drawable="sumup" />
