--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -30,7 +30,6 @@
 	<item drawable="uchi" />
 	<item drawable="wahoo" />
 	<item drawable="ytdlnis" />
-	<item drawable="alembicons" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -679,6 +678,7 @@
 	<item drawable="minimalist_pomodoro_timer_alt_1" />
 	<item drawable="mj_pdf_reader_alt_1" />
 	<item drawable="mlauncher_alt_1" />
+	<item drawable="mlb_ballpark_alt_1" />
 	<item drawable="mmrl_alt_1" />
 	<item drawable="moelist_alt_1" />
 	<item drawable="money_fellows_alt_1" />
