Add icons&compinfo (#1079)
* add icons premium request

* small fix

* add icons

* small fix

* add icons

* add compinfo

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2194,7 +2194,6 @@
 	<item component="ComponentInfo{com.ballistiq.artstation/com.ballistiq.artstation.view.activity.screen.MainActivity2}" drawable="artstation" />
 	<item component="ComponentInfo{com.balysv.loop/com.balysv.loop.SplashScreenActivity}" drawable="infinite_loop" />
 	<item component="ComponentInfo{com.bambuna.podcastaddict/com.bambuna.podcastaddict.activity.PodcastListActivity}" drawable="podcast_addict" />
-	<item component="ComponentInfo{com.bamnetworks.mobile.android.ballpark/com.bamnetworks.mobile.android.ballpark.activity.MainActivity}" drawable="mlb" />
 	<item component="ComponentInfo{com.bamnetworks.mobile.android.ballpark/com.bamnetworks.mobile.android.ballpark.activity.MainActivity}" drawable="mlb_ballpark" />
 	<item component="ComponentInfo{com.bamnetworks.mobile.android.gameday.atbat/com.bamnetworks.mobile.android.gameday.appstart.viewcontrollers.SplashScreenActivity}" drawable="at_bat" />
 	<item component="ComponentInfo{com.bamnetworks.mobile.android.gameday.atbat/mlb.atbat.activity.MainActivity}" drawable="at_bat" />
@@ -5857,7 +5856,7 @@
 	<item component="ComponentInfo{com.jxareas.xpensor/com.jxareas.xpensor.features.authentication.presentation.ui.AuthenticationActivity}" drawable="xpensor" />
 	<item component="ComponentInfo{com.k2fsa.sherpa.onnx.tts.engine/com.k2fsa.sherpa.onnx.tts.engine.MainActivity}" drawable="sherpa_tts" />
 	<item component="ComponentInfo{com.kaajjo.libresudoku/com.kaajjo.libresudoku.MainActivity}" drawable="libresudoku" />
-	<item component="ComponentInfo{com.kaanelloed.iconeration/com.kaanelloed.iconeration.MainActivity}" drawable="iconeration" />
+	<item component="ComponentInfo{com.kaanelloed.iconeration/com.kaanelloed.iconeration.MainActivity}" drawable="alembicons" />
 	<item component="ComponentInfo{com.kabam.marvelbattle/com.explodingbarrel.Activity}" drawable="marvel_champions" />
 	<item component="ComponentInfo{com.kabouzeid.gramophone/com.kabouzeid.gramophone.ui.activities.MainActivity}" drawable="phonograph" />
 	<item component="ComponentInfo{com.kaching.merchant/com.kaching.merchant.Activities.RegisterActivity}" drawable="sumup" />
