--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -29,6 +29,7 @@
 	<item drawable="turn_up" />
 	<item drawable="uchi" />
 	<item drawable="wahoo" />
+	<item drawable="ytdlnis" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -53,6 +54,7 @@
 	<item drawable="airtel_alt_1" />
 	<item drawable="al_chan_alt_1" />
 	<item drawable="all__trails_alt_1" />
+	<item drawable="alembicons_alt_1" />
 	<item drawable="alto_alt_1" />
 	<item drawable="amazon_alexa_alt_1" />
 	<item drawable="amazon_workspaces_alt_1" />
@@ -676,6 +678,7 @@
 	<item drawable="minimalist_pomodoro_timer_alt_1" />
 	<item drawable="mj_pdf_reader_alt_1" />
 	<item drawable="mlauncher_alt_1" />
+	<item drawable="mlb_ballpark_alt_1" />
 	<item drawable="mmrl_alt_1" />
 	<item drawable="moelist_alt_1" />
 	<item drawable="money_fellows_alt_1" />
@@ -1455,6 +1458,7 @@
 	<item drawable="youtube_vanced_alt_2" />
 	<item drawable="youtube_vanced_alt_3" />
 	<item drawable="youtube_vanced_alt_4" />
+	<item drawable="ytdlnis_alt_1" />
 	<item drawable="zattoo_alt_1" />
 	<item drawable="zello_alt_1" />
 	<item drawable="zimly_alt_1" />
@@ -2442,6 +2446,7 @@
 	<item drawable="aldiko" />
 	<item drawable="aldiko_next" />
 	<item drawable="alelo" />
+	<item drawable="alembicons" />
 	<item drawable="aleph_one" />
 	<item drawable="aleria_for_kwgt" />
 	<item drawable="alertable" />
@@ -5945,7 +5950,6 @@
 	<item drawable="icon_pack_studio" />
 	<item drawable="icon_packer" />
 	<item drawable="icon_pusher" />
-	<item drawable="iconeration" />
 	<item drawable="iconify" />
 	<item drawable="iconrequest" />
 	<item drawable="iconzy" />
